# demo_dbt_dremio

./: Dockerfile  docker-compose.yml  fill.py  pyproject.toml
demo_dbt_dremio/: .user.yml  dbt_project.yml  profiles.yml
demo_dbt_dremio/models/basic/: aggregated_transactions.sql  schema.yml
