[tool.poetry]
name = "demo_dbt_dremio"
version = "1.0.0"
description = ""
authors = ["wol4aravio <panovskiy.v@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.22"
PyMySQL = "^1.0.2"
pymongo = "^3.11.2"
dbt = "^0.18.1"
dbt-dremio = "^0.18.0"
Faker = "^5.8.0"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
